force-app/main/default/objects/Process__c/fields/BIA_Created__c.field-meta.xml
<CustomField>
    <fullName>BIA_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIA Created</label>
    <type>Checkbox</type>
</CustomField>