force-app/main/default/objects/Process__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>Processes</relationshipLabel>
    <relationshipName>Processes</relationshipName>
    <type>Lookup</type>
</CustomField>