force-app/main/default/objects/Process__c/fields/Department_Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Department_Business_Function__c</fullName>
    <label>Department / Business Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>