force-app/main/default/objects/Process__c/fields/Financial_Impact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Impact__c</fullName>
    <label>Financial Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimal</fullName>
            </value>
            <value>
                <fullName>Considerable</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>