force-app/main/default/objects/Process__c/fields/Operational_Impact__c.field-meta.xml
<CustomField>
    <fullName>Operational_Impact__c</fullName>
    <label>Operational Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimal</fullName>
            </value>
            <value>
                <fullName>Considerable</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>