force-app/main/default/objects/Process__c/fields/Recovery_Time_Objective__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Time_Objective__c</fullName>
    <label>Recovery Time Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>4 Hours</fullName>
            </value>
            <value>
                <fullName>8 Hours</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>48 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>