force-app/main/default/objects/Process__c/fields/Subject_Matter_Expert__c.field-meta.xml
<CustomField>
    <fullName>Subject_Matter_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject Matter Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Processes</relationshipName>
    <type>Lookup</type>
</CustomField>