force-app/main/default/objects/Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department_Business_Function__c</columns>
    <columns>Business_Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>